<resources>
    <string name="app_name">AniRecipe</string>
    <string name="task_name_hint">Task name</string>
    <string name="task_desc_hint">Task description</string>
    <string name="task_date_hint">Deadline (ex. 12/20/2022)</string>
    <string name="task_time_hint">Deadline time (ex. 11:15)</string>
    <string name="loading_production">PRODUCTION</string>
    <string name="content_desc">i do not know what is it, but it\'s a warning, i guess..</string>
    <string name="button_text_save">Save</string>
    <string name="username_show">Signed in as</string>
    <string name="button_text_update">Update</string>
    <string name="reg_email_error">Email can\'t be empty</string>
    <string name="reg_pass_error">Password can\'t be empty</string>
    <string name="edit_text_empty">This field can\'t be empty</string>
    <string name="save_task_succ">Saved</string>
    <string name="save_task_error">Some fields are empty</string>
    <string name="save_task_incorrect_date">The date must be represented in the format dd/mm/yyyy</string>
    <string name="email_auth_error">E-mail must be verified (check your mailbox)</string>
    <string name="login_succ">Login successful</string>
    <string name="login_error">Login failed, reason: </string>
    <string name="empty_task_received">Empty recipe received</string>
    <string name="delete_task_confirm">Are you sure you want to delete task </string>
    <string name="question_sign">\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok_then">ok then</string>
    <string name="logout_button_name">Logout</string>
    <string name="auth_reminder">Email verification was sent</string>
    <string name="reg_error">Sign up failed, reason: </string>
    <string name="email_failed">Error when sending the confirmation email</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Register</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="already_registered">Already have an account?</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>


    <string name="recipe_title">Омлет-суфле</string>
    <string name="cooking_time">Время приготовления: 20 минут</string>
    <string name="recipe_instruction">1) Берём яйца, разделяем желтки и белки

2) Белки взбиваем миксером до твёрдых пиков

3) В желтки добавляем соль, сливки и размешиваем

4) Аккуратно добавляем в белки желтки, аккуратно размешиваем

5) На разогретую сководу добавляем сливочное масло и выливаем полученную смесь.

6) Разравниваем её по поверхности сковороды аккуратными движениями, чтобы не повредить структуру суфле

7) Накрываем крышкой и даём дойти на медленном-среднем огне в течение 3-3.5 минут

8) Убираем крышку, складываем омлет и выкладываем на тарелку
    </string>
    <string name="recipe_ingredients">Яйца куриные — 2-3 шт (зависит от размера)
Жирные сливки (33 или 20%) — 1/2 ст.л.
Соль, перец — по вкусу
Петрушка — 1/3 пучка, для подачи</string>
    <string name="source_text">Кулинарные поединки Сомы / Food Wars!</string>
    <string name="recipe_details">Details</string>
    <string name="label_text_string">TEXT123</string>
    <string name="there_are_no_favorite_recipes">There are no favorite recipes!</string>
</resources>