<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/listRecyclerView"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/logoutButton"
        android:text="@string/username_show"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />


    <ImageView
        android:id="@+id/no_recipes_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/error_image"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/no_recipes"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/there_are_no_favorite_recipes"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:autoSizeTextType="uniform" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:minLines="1"
        android:maxLines="1"
        android:textSize="12sp"
        android:text="@string/logout_button_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary_orange"
        android:src="@drawable/ic_baseline_add" />


</com.google.android.material.circularreveal.CircularRevealRelativeLayout>